kubernetes/adguardhome/adguardhome/internal/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: http
spec:
  ports:
  - name: http
    targetPort: http
    port: 80
    protocol: TCP
  - name: metrics
    targetPort: metrics
    port: 9617
    protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: dns-udp
  labels:
    cilium-bgp-advertise: default
spec:
  externalTrafficPolicy: Local
  loadBalancerIP: 10.200.0.3
  type: LoadBalancer
  ports:
  - name: dns-udp
    targetPort: dns-udp
    port: 53
    protocol: UDP

---

apiVersion: v1
kind: Service
metadata:
  name: discovery
spec:
  clusterIP: None
  ports:
  - name: http
    targetPort: http
    port: 80
    protocol: TCP
